--- a/es/5-kibana-ingress.yaml
+++ b/es/5-kibana-ingress.yaml
@@ -1,14 +1,24 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: kibana-logging
   namespace: kube-logging
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
+    cert-manager.io/cluster-issuer: "le-issuer"
 spec:
   rules:
-  - host: kibana.apps.kct.mylab.local
-    http:
+  - http:
       paths:
-      - backend:
-          serviceName: kibana
-          servicePort: 5601
-        path: /
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: kibana
+            port:
+              number: 5601
+    host: kibana.k8s.mevijay.dev
+  tls:
+  - hosts:
+    - kibana.k8s.mevijay.dev
+    secretName: tls-kibana
