--- a/example/hello-k8s.yaml
+++ b/example/hello-k8s.yaml
@@ -40,7 +40,7 @@ metadata:
     namespace: default
 spec:
     rules:
-      - host: nginx1.mylab.local
+      - host: nginx1.k8s.mylab.local
         http:
           paths:
             - backend:
@@ -49,5 +49,5 @@ spec:
               path: /
     tls:
         - hosts:
-            - nginx1.mylab.local
+            - nginx1.k8s.mylab.local
           secretName: nginx-cert-tls
